# dressi

./: .clang-format  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README-android.md  README.md  pyproject.toml
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  android_host.cpp  android_host.h  device_caps.cpp  jni_bridge.cpp
android/app/src/main/java/org/dressi/examples/: AssetInstaller.kt  MainActivity.kt  NativeBridge.kt
cmake/: FetchAssets.cmake  FindVulkanSdk.cmake
docs/: algorithm.md  benchmarks.md
examples/: CMakeLists.txt
examples/common/: asset_utils.cpp  asset_utils.h  bench.cpp  bench.h  desktop_host.cpp  desktop_host.h  example_host.h  example_registry.cpp  geometry_utils.cpp  geometry_utils.h  pbr_graph.cpp  pbr_graph.h  sobol.h  viewer.h  vk_viewer.cpp  vk_viewer.h
examples/image_fitting/: main.cpp  run.cpp  run.h
examples/pbr_envmap_optimization/: main.cpp  run.cpp  run.h
examples/pbr_material_optimization/: main.cpp  run.cpp  run.h
examples/pbr_shading/: main.cpp  run.cpp  run.h
examples/python/: common.py  silhouette_optimization.py  texture_optimization.py
examples/shape_texture_optimization/: main.cpp  run.cpp  run.h
examples/silhouette_optimization/: main.cpp  run.cpp  run.h
examples/texture_optimization/: main.cpp  run.cpp  run.h
include/dressi/: dressi.h  dressi_ad.h  f.h  function.h  ibl.h  mesh_utils.h  types.h  variable.h
log/: 202607101300_vertex_gradients_hardsoftras_aa.md  202607102000_perf_uif_aliasing_pass_reduction.md  202607102300_torch_python_bindings.md  202607110108_python_silhouette_steady_benchmark.md  202607111210_dataset_auto_fetch.md  202607111330_pbr_ibl_stage_a.md  202607111710_linux_support.md  202607111810_intel_igpu_portability.md  202607111900_nvidia_regression_check_intel_port.md  202607121200_android_port.md  202607131115_bench_warmup_recording.md  202607131215_iter_reduction_envmap_reg.md  202607140230_shape_texture_demo.md  202607182330_envmap_fg_only_loss.md
python/: CMakeLists.txt
python/csrc/: module.cpp
python/dressi/: __init__.py
python/dressi/torch/: __init__.py  context.py  convert.py  engine.py  meshdata.py  ops.py  provenance.py
scripts/: bench_summary.py  dressi_native_bench.py  dressi_torch_bench.py  drtk_bench.py  nvdiffrast_bench.py  pull_android_benches.ps1  pull_android_benches.sh
src/: dressi_ad.cpp
src/codegen/: glsl_codegen.cpp  glsl_codegen.h
src/core/: build_backward.cpp  build_backward.h  cpu_eval.cpp  cpu_eval.h  cpu_raster.cpp  cpu_raster.h  f_ops.cpp  ibl.cpp  ibl_math.h  infer.cpp  infer.h  mesh_utils.cpp  node.cpp  node.h  op_builder.cpp  op_builder.h
src/pack/: greedy_packer.cpp  packing.h  reactive.cpp  reactive.h  substage.h  trivial_packer.cpp
src/vk/: context.cpp  context.h  executor.cpp  executor.h  transfer.cpp  transfer.h
tests/: CMakeLists.txt  aa_scene.h  grad_capture.h  softras_scene.h  test_antialias.cpp  test_antialias_gpu.cpp  test_backward.cpp  test_codegen.cpp  test_cpu_eval.cpp  test_executor_naive.cpp  test_executor_rsp.cpp  test_grad_export.cpp  test_graph.cpp  test_ibl_gpu.cpp  test_infer.cpp  test_packing.cpp  test_reactive.cpp  test_softras.cpp  test_softras_gpu.cpp  test_vk_smoke.cpp
tests/python/: conftest.py  test_antialias.py  test_interpolate.py  test_optimize.py  test_rasterize.py  test_softras.py  test_texture.py
tools/: CMakeLists.txt
tools/downsample_exr/: main.cpp
